--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider:
+  http: ^0.13.3
 
 
   # The following adds the Cupertino Icons font to your application.
